--- a/app/components/stateMap/view.html
+++ b/app/components/stateMap/view.html
@@ -1,4 +1,4 @@
-<svg version="1.1" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 540 360" xml:space="preserve">
+<svg version="1.1" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 540 360" xml:space="preserve">
   <!-- shadows -->
   <g id="shadows">
     <path ng-repeat="shadow in $ctrl.config.shadows" ng-attr-fill="{{ $ctrl.config.shadowfill }}" ng-attr-d="{{shadow}}" style="fill-opacity: 0.5;"></path>
