--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -1927,3 +1927,45 @@ margin-right: 10px;
 vertical-align: middle;
 display: inline;
 }
+
+/*for add listing steps*/
+.add-listing-nav  ul.profile-nav-list li{
+    display: inline-block;
+    position: relative;
+    width: auto;
+    margin-left: 6px;
+}
+
+.add-listing-nav ul.profile-nav-list li:not(:first-child):before{
+ content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 17px 0 17px 20px;
+    border-color: transparent transparent transparent #fff;
+    left: 0;
+    z-index: 1;
+}
+.add-listing-nav ul.profile-nav-list li:after{
+ content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 17px 0 17px 20px;
+    border-color: transparent transparent transparent #2172a7;
+    z-index: 99999;
+}
+.add-listing-nav ul.profile-nav-list li a{
+    font-size: 12px;
+    text-align: right;
+    padding: 8px 8px 8px 26px;
+}
+.add-listing-nav ul.profile-nav-list li a:hover{
+    background: #2172a7;
+}
+.add-listing-nav ul.profile-nav-list li:first-child a{
+ border-radius: 13px 0px 0px 13px;
+}
+.add-listing-nav .disable-me{
+pointer-events: none;
+ background: #2172a7;
+ opacity: .7;
+}
