--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -1904,7 +1904,7 @@ label.error {
   cursor: pointer;
 }
 
-.ng-valid-required+.help-block {
+.ng-valid-pattern+.help-block {
   color: #d50000 !important;
 }
 
@@ -1994,11 +1994,87 @@ text-align: center;
 }
 .membership-table td{
   text-align: center;
+  font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .fa.fa-check-circle{
-  font-size:1.5em !important;
+  font-size:1.2em !important;
   color: #8dad3d;
 }
 p .btn-success {
     margin-bottom: 10px;
+    padding: 3px 10px;
+}
+.highlight-plan{
+  background-color: #fdf8e2;
+  -webkit-box-shadow: 2px 0px 1px rgba(51,51,51,0.25),-2px 0px 1px rgba(51,51,51,0.25);
+}
+.feature-label{
+  vertical-align: middle;
+  font-weight: bold;
+  font-size: 15px;
+
+}
+
+.bottomLine-free:after{
+  background: #006c7a;
+  display: block;
+  position: absolute;
+  bottom: 15px;
+  /*left: -1px;*/
+  content: "";
+  width: 29%;
+  height: 5px;
+  margin-left: -9px;
+}
+.bottomLine-sponsored:after{
+  background: #f8922f;
+  display: block;
+  position: absolute;
+  bottom: 15px;
+  /*left: -1px;*/
+  content: "";
+  width: 29%;
+  height: 5px;
+  margin-left: -9px;
+}
+.bottomLine-featured:after{
+  background: #8dad3d;
+  display: block;
+  position: absolute;
+  bottom: 15px;
+  /*left: -1px;*/
+  content: "";
+  width: 25%;
+  height: 5px;
+  margin-left: -9px;
+}
+.topLine-free:before{
+  display: block;
+  content: "";
+  width: 106%;
+  height: 5px;
+  background: #006c7a;
+  padding: 0px;
+  margin-left: -7px;
+  margin-top: -8px;
+}
+.topLine-sponsored:before{
+  background: #f8922f;
+  display: block;
+  content: "";
+  width: 106%;
+  height: 5px;
+  padding: 0px;
+  margin-left: -7px;
+  margin-top: -8px;
+}
+.topLine-featured:before{
+  background: #8dad3d;
+  display: block;
+  content: "";
+  width: 106%;
+  height: 5px;
+  padding: 0px;
+  margin-left: -7px;
+  margin-top: -8px;
 }
