--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2044,7 +2044,7 @@ p .btn-success {
   bottom: 15px;
   /*left: -1px;*/
   content: "";
-  width: 25%;
+  width: 17%;
   height: 5px;
   margin-left: -9px;
 }
@@ -2077,4 +2077,9 @@ p .btn-success {
   padding: 0px;
   margin-left: -7px;
   margin-top: -8px;
+}
+
+.fa.fa-times-circle{
+  font-size: 1.2em !important;
+  color: #f00;
 }
