--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -2114,7 +2114,8 @@ input.btn{
 }
 
 .modal-dialog.modal-lg{
-  width: 72%;
+  /*display:flex;*/
+  width : 72%;
 }
 
 .modal-dialog .btn{
@@ -2228,7 +2229,7 @@ input.btn{
   margin-left: -800%;
 }
 .modal-dialog .seven_columns.negative_margin ul{
-  margin-left: -550%;
+  margin-left: -533%;
 }
 .modal-dialog .six_and_last_columns.negative_margin ul{
   margin-left: -500%;
@@ -2290,7 +2291,7 @@ margin-left: 40%;
   margin-left:-100%;
 }
 .six_columns.county_negative_six ul{
-  margin-left: -200%;
+  margin-left: -215%;
 }
 .modal-dialog ul{
   max-height: 70vh;
@@ -2298,3 +2299,9 @@ margin-left: 40%;
 .two_columns.county_negative_two ul{
   width:400px;
 }
+html {
+    overflow-y:scroll;
+}
+.wp-flybox_tab.call_us { background: #2172a7; }
+
+.wp-flybox_tab.call_us p { color: white; }
